<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SquashDrills</string>
    <string name="btn_configuration">Configuration</string>
    <string name="btn_routinemenu">Play Routine</string>
    <string name="btn_personalrecords">Personal Records</string>
    <string name="btn_create">Create</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_play">Play</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_pause">Pause</string>
    <string name="txt_preStart">Waiting to start...</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_configuration">Configuration</string>
    <string name="title_activity_play_routine">Play Routine</string>
    <string name="title_activity_personal_records_menu">Personal Records Menu</string>
    <string name="title_activity_routine_menu">Routine Menu</string>

</resources>